--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 url:              https://holisticmemoir.github.io/holistic_memoir/
-baseurl:          ""
+baseurl:          "holistic_memoir"
 title:            A HOLISTIC MEMOIR OF THE PHD EXPERIENCE
 tagline:          'Exploring the uniqueness of the PhD experience, one story at a time.'
 description: 'When considering or beginning a PhD, many of us read books and articles describing the experience awaiting us. But these are written from the perspective of the person who\'s written the article, because <i>every experience is unique</i>.
