--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,10 @@ url:              https://holisticmemoir.github.io/holistic_memoir
 baseurl:          "/holistic_memoir/"
 title:            A HOLISTIC MEMOIR OF THE PHD EXPERIENCE
 tagline:          'Exploring the uniqueness of the PhD experience, one story at a time.'
-description: "When considering or beginning a PhD, many of us read books and articles describing the experience awaiting us. But these are written from the perspective of the person who's written the article, because <i>every experience is unique</i>.\n
-They also have certain things in common. The PhD experience seems to go through a similar pattern for everybody, with similar highs and lows, trials and joys. Every experience is unique — <i>some of the time</i> — so what should you expect?\n
-This is a memoir of a PhD experience, where each short essay describes a different person's experience of their PhD. Perspectives are collected from different stages of study, different kinds of research, different research structures, different experiences — outlining the similarities and the differences, for you.\n
-\n
-This is the reference we wish we had when we began."
+description: "<p>When considering or beginning a PhD, many of us read books and articles describing the experience awaiting us. But these are written from the perspective of the person who's written the article, because <i>every experience is unique</i>.</p>
+<p>They also have certain things in common. The PhD experience seems to go through a similar pattern for everybody, with similar highs and lows, trials and joys. Every experience is unique — <i>some of the time</i> — so what should you expect?</p>
+<p>This is a memoir of a PhD experience, where each short essay describes a different person's experience of their PhD. Perspectives are collected from different stages of study, different kinds of research, different research structures, different experiences — outlining the similarities and the differences, for you.</p>
+<p>This is the reference we wish we had when we began.</p>"
 
 author:
   name:           'A community effort, spearheaded by Tom Wallis'
