Made the site description a little less full of itsellf

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ tagline:          'Exploring the uniqueness of the PhD experience, one story at 
 description: "<p>When considering or beginning a PhD, many of us read books and articles describing the experience awaiting us. But these are written from the perspective of the person who's written the article, because <i>every experience is unique</i>.</p>
 <p>They also have certain things in common. The PhD experience seems to go through a similar pattern for everybody, with similar highs and lows, trials and joys. Every experience is unique — <i>some of the time</i> — so what should you expect?</p>
 <p>This is a memoir of a PhD experience, where each short essay describes a different person's experience of their PhD. Perspectives are collected from different stages of study, different kinds of research, different research structures, different experiences — outlining the similarities and the differences, for you.</p>
-<p>This is the reference we wish we had when we began.</p>"
+<p>This aims to be the reference many of us wished we had when we began.</p>"
 
 author:
   name:           'A community effort, spearheaded by Tom Wallis'
